# metaAdder

./: .gitignore  CMakeLists.txt  Makefile
files/: xlsx.xlsx
metaAdder.xcodeproj/: project.pbxproj
src/: MetaAdder.cpp  MetaAdder.hpp  MetaError.cpp  MetaError.hpp  MetaProcessor.cpp  MetaProcessor.hpp  main.cpp
src/OfficeMeta/: OfficeMeta.cpp  OfficeMeta.hpp
src/metaAdder/: MetaLogger.hpp  OfficeMetaAdder.hpp  PDFMetaAdder.hpp  XAttrMetaAdder.hpp  metaAdder.hpp  metaProcessor.hpp  metaWrapper.hpp
src/pdfEdit/: keyEdit.cpp  keyEdit.hpp
src/private/: XattrMetaProcessor.cpp  XattrMetaProcessor.hpp
src/xattr/: CustomXAttr.cpp  CustomXAttr.hpp  class.cpp  class.h  class.hpp
